# quickcheck-numeric

./: quickcheck-numeric.cabal
Test/QuickCheck/: Numeric.hs
